--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.6",
+    "@lens-protocol/react-web": "^1.3.1",
+    "@lens-protocol/wagmi": "^2.1.1",
+    "@web3uikit/web3": "^0.3.2",
+    "graphql": "^16.8.1",
+    "magic-sdk": "^21.0.0",
+    "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-moralis": "^1.4.2",
+    "viem": "^1.16.6",
+    "wagmi": "^1.4.4",
+    "web3": "^4.1.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.5",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.5"
+    "typescript": "^5"
   }
 }
